menifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easyclaim-frontend
  labels:
    name: easyclaim-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      name: easyclaim-frontend
  template:
    metadata:
      name: easyclaim-frontend
      labels:
        name: easyclaim-frontend
    spec:
      containers:
        - name:  easyclaim-frontend
          image: vigneshsweekaran/easyclaim-frontend
          imagePullPolicy: Always
          volumeMounts:
          - name: config-volume
            mountPath: "/usr/share/nginx/html/assets"
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
      - name: config-volume
        configMap:
          name: easyclaim-frontend
          items:
          - key: config
            path: config.json
