menifest/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: easyclaim
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /easyclaim-frontend(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: easyclaim-frontend
            port: 
              number: 80
      - path: /easyclaim-backend(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: easyclaim-backend
            port:
              number: 8080
